colang-cli/tests/samples/features/pointers/compile_error/address_type_mismatch.co
fun main() {
  var x = 2;
  var p: &bool = &x;
}
